Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-19324

Exception when modifying a deleted file type

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • 0.4.15
    • Shell
    • None

    Description

      reactos-bootcd-0.4.15-dev-6955-gdb219e4-x86-gcc-lin-dbg

      • Open File extension settings
      • Add a new extention (eg : "blabla")
      • Give it focus
      • Delete it
      • It is still displayed on the lower part of the dialog : CORE-19325
      • Click on advanced
      • Do change and try to close the window : Does not close and logs as below
      • Expected result : No exception (advanced button without action if no list item selection)

      err:(win32ss/user/user32/windows/message.c:1556) Exception Dialog unicode 7AFA85AA Msg 273 pti B7EAB038 Wndpti B7EAB038 

      Guilty code : dll/win32/shell32/dialogs/filetypes.cpp where NULL is passed as edittype.pEntry then used by the Edit window without proper checks here : https://git.reactos.org/?p=reactos.git;a=blob;f=dll/win32/shell32/dialogs/filetypes.cpp;hb=ee11747527d0a4ffff60f5d0b1ee820001ac9319#l1227 assuming pEditType is non-NULL

      Patch : filetypes.patch

      Attachments

        1. filetypes.patch
          2 kB
        2. image-2023-11-18-10-39-11-379.png
          image-2023-11-18-10-39-11-379.png
          25 kB
        3. putty.log
          65 kB
        4. ROS-screen0.webm
          1.10 MB

        Activity

          People

            katayama_hirofumi_mz Katayama Hirofumi MZ
            KRosUser KRosUser
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: