[SHELL32] Fix exception on modifying deleted file type (#5996)

Based on KRosUser's filetypes.patch. Check NULL for pEntry.
CORE-19324