dll/win32/shell32/dialogs/filetypes.cpp
@@ -1722,8 +1722,11 @@ FolderOptionsFileTypesDlg(
                 case IDC_FILETYPES_ADVANCED:
                     edittype.hwndLV = GetDlgItem(hwndDlg, IDC_FILETYPES_LISTVIEW);
                     edittype.pEntry = FileTypesDlg_GetEntry(edittype.hwndLV);
-                    DialogBoxParamW(shell32_hInstance, MAKEINTRESOURCEW(IDD_EDITTYPE),
-                                    hwndDlg, EditTypeDlgProc, (LPARAM)&edittype);
+                    if (edittype.pEntry)
+                    {
+                        DialogBoxParamW(shell32_hInstance, MAKEINTRESOURCEW(IDD_EDITTYPE),
+                                        hwndDlg, EditTypeDlgProc, (LPARAM)&edittype);
+                    }
                     break;
             }
             break;
@@ -1745,8 +1748,11 @@ FolderOptionsFileTypesDlg(
                 case NM_DBLCLK:
                     edittype.hwndLV = GetDlgItem(hwndDlg, IDC_FILETYPES_LISTVIEW);
                     edittype.pEntry = FileTypesDlg_GetEntry(edittype.hwndLV);
-                    DialogBoxParamW(shell32_hInstance, MAKEINTRESOURCEW(IDD_EDITTYPE),
-                                    hwndDlg, EditTypeDlgProc, (LPARAM)&edittype);
+                    if (edittype.pEntry)
+                    {
+                        DialogBoxParamW(shell32_hInstance, MAKEINTRESOURCEW(IDD_EDITTYPE),
+                                        hwndDlg, EditTypeDlgProc, (LPARAM)&edittype);
+                    }
                     break;
 
                 case LVN_DELETEALLITEMS:
